add pima indian nn

--- a/neuralnet.ipynb
+++ b/neuralnet.ipynb
@@ -2,32 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 0])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
-    "X = [[0., 0.], [1., 1.]]\n",
-    "y = [0, 1]\n",
-    "clf = MLPClassifier(solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)\n",
-    "clf.fit(X, y)\n",
-    "MLPClassifier(alpha=1e-05, hidden_layer_sizes=(5, 2), random_state=1,\n",
-    "              solver='lbfgs')\n",
+    "from sklearn.datasets import fetch_openml\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.python.keras.layers import Dense\n",
+    "from tensorflow.python.keras import Sequential\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "%matplotlib inline\n",
+    " \n",
+    "### imports our dataset ###\n",
+    "dataset = pd.read_csv('pima-indians-diabetes.csv')\n",
     "\n",
-    "clf.predict([[2., 2.], [-1., -2.]])\n",
-    "print mlp.score(X_test,y_test)"
+    "X = dataset.iloc[:,0:8]\n",
+    "y = dataset.iloc[:,8]\n",
+    "\n",
+    "### DATA CLEANING AND VIZ ###\n",
+    "\n",
+    "# plots relation of the data points\n",
+    "\n",
+    "# sns.pairplot(dataset)\n",
+    "# sns.heatmap(dataset.corr())\n",
+    "\n",
+    "### normalize our datapoints ###\n",
+    "\n",
+    "# process normalize x quantities\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "X = sc.fit_transform(X)\n",
+    "\n",
+    "### split into training and testing ###\n",
+    "kfold = StratifiedKFold(n_splits=5, shuffle=True)\n",
+    "\n",
+    "### CREATES NEURAL NETWORK ###\n",
+    "\n",
+    "# compiles neural network\n",
+    "estimator = KerasClassifier(build_fn=create_baseline, epochs=140, batch_size=5, verbose=0)\n",
+    "\n",
+    "## prints score\n",
+    "results = cross_val_score(estimator, X, y, cv=kfold)\n",
+    "\n",
+    "print(\"Smaller: %.2f%% (%.2f%%)\" % (results.mean()*100, results.std()*100))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# baseline model\n",
+    "def create_baseline():\n",
+    "    # create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(4, input_dim=8, activation='relu'))\n",
+    "    model.add(Dense(4, input_dim=8, activation='relu'))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    # Compile model\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
