adjust # of folds

--- a/neuralnet.ipynb
+++ b/neuralnet.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smaller: 75.88% (2.69%)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.datasets import fetch_openml\n",
